syntax = "proto3";

package prometheus;

option go_package = "github.com/AkshayDubey29/mimir-edge-enforcement/protos/prometheus";

message WriteRequest {
  repeated TimeSeries timeseries = 1;
  int32 source = 2;
  int64 timestamp_ms = 3;
}

message TimeSeries {
  repeated Label labels = 1;
  repeated Sample samples = 2;
  repeated Exemplar exemplars = 3;
  repeated Histogram histograms = 4;
}

message Label {
  string name = 1;
  string value = 2;
}

message Sample {
  double value = 1;
  int64 timestamp = 2;
}

message Exemplar {
  int64 timestamp = 1;
  double value = 2;
  repeated Label labels = 3;
}

message Histogram {
  int64 timestamp = 1;
  double count = 2;
  double sum = 3;
  repeated BucketSpan positive_spans = 4;
  repeated BucketSpan negative_spans = 5;
  repeated double positive_deltas = 6;
  repeated double negative_deltas = 7;
  double zero_count = 8;
  double zero_threshold = 9;
}

message BucketSpan {
  int32 offset = 1;
  int32 length = 2;
}


